chapter.6/6-11/6-11-6/sample-ingress-by-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress-by-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: sample.example.com
    http:
      paths:
      - path: /path1
        pathType: Prefix
        backend:
          service:
            name: sample-ingress-svc-1
            port:
              number: 8888
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: sample-ingress-svc-2
            port:
              number: 8888
  defaultBackend:
    service:
      name: sample-ingress-default
      port:
        number: 80
  tls:
  - hosts:
    - sample.example.com
    secretName: tls-sample
